--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -19,6 +19,8 @@
 
     {% # Load and preload the critical CSS %}
     {{ 'critical.css' | asset_url | stylesheet_tag: preload: true }}
+    {{ 'tailwind.output.css' | asset_url | stylesheet_tag }}
+    {{ 'section-swiper.css' | asset_url | stylesheet_tag }}
 
     {% # Social, title, etc. %}
     {% render 'meta-tags' %}
@@ -32,5 +34,6 @@
     {{ content_for_layout }}
 
     {% sections 'footer-group' %}
+    <script src="{{ 'section-swiper.js' | asset_url }}" defer="defer"></script>
   </body>
 </html>
