--- a/snippets/product-gallery.liquid
+++ b/snippets/product-gallery.liquid
@@ -46,7 +46,7 @@
       <div class="swiper-wrapper">
         {%- unless product.images == blank -%}
           {%- for image in product.images -%}
-            <div class="swiper-slide">
+            <div class="swiper-slide tw:!size-fit">
               <button
                 type="button"
                 class="tw:w-22 tw:h-22 tw:rounded-lg tw:overflow-hidden tw:relative tw:after:content-[''] tw:after:absolute tw:after:inset-0 tw:after:bg-dark/20 tw:after:opacity-0 tw:[&[aria-pressed='true']]:after:opacity-100"
