--- a/snippets/color-picker.liquid
+++ b/snippets/color-picker.liquid
@@ -8,25 +8,23 @@
   assign target_product = product
   assign all_products = collections.all.products
   assign target_key = target_product.metafields.custom.group_key.value
-  assign is_active = forloop.first
 -%}
 <div
   class="tw:flex"
 >
   {% for product in all_products %}
     {% if product.metafields.custom.group_key.value == target_key %}
-        
+      {% assign product_color = product.metafields.custom.product_color.value %}
       <button
         role="radio"
-        aria-checked=""
-        aria-label="{{ product.handle }}"
-        data-url="{{ product.url }}"
-        aria-current="{% if product.handle == target_product.handle %} true {% else %} false {% endif %}"
-        tabindex="{% if is_active %}0{% else %}-1{% endif %}"
+        aria-label="{{- product_color -}}"
+        data-url="{{- product.url -}}"
+        aria-checked="{%- if product.handle == target_product.handle -%}true{%- else -%}false{%- endif -%}"
+        tabindex="{%- if product.handle == target_product.handle -%}0{%- else -%}-1{%- endif -%}"
         type="button"
         class="color-button tw:w-22 tw:h-22 tw:mr-2 tw:rounded-xl tw:overflow-hidden {% if product.handle == target_product.handle %}tw:border tw:border-dark {% endif %}"
       >
-        {{ product.featured_image | image_url: width: 100 | image_tag: alt: product.handle, class: 'tw:w-full tw:object-cover tw:aspect-square' }}
+        {{ product.featured_image | image_url: width: 100 | image_tag: alt: product_color, class: 'tw:w-full tw:object-cover tw:aspect-square' }}
       </button>
     {% endif %}
   {% endfor %}
