--- a/snippets/product-gallery.liquid
+++ b/snippets/product-gallery.liquid
@@ -49,7 +49,7 @@
             <div class="swiper-slide tw:!size-fit">
               <button
                 type="button"
-                class="tw:w-22 tw:h-22 tw:rounded-lg tw:overflow-hidden tw:relative tw:after:content-[''] tw:after:absolute tw:after:inset-0 tw:after:bg-dark/20 tw:after:opacity-0 tw:[&[aria-pressed='true']]:after:opacity-100"
+                class="tw:w-22 tw:h-22 tw:cursor-pointer tw:rounded-lg tw:overflow-hidden tw:relative tw:after:content-[''] tw:after:absolute tw:after:inset-0 tw:after:bg-dark/20 tw:after:opacity-0 tw:[&[aria-pressed='true']]:after:opacity-100"
                 aria-label="Show image {{ forloop.index }}"
                 aria-pressed="{{ forloop.first }}"
               >
