--- a/sections/main-product-section.liquid
+++ b/sections/main-product-section.liquid
@@ -49,21 +49,29 @@
           {%- endif -%}
         {% when 'product-price' %}
           <div role="status" class="tw:m-auto tw:max-w-146 tw:mt-6 tw:lg:mr-0 tw:lg:mb-0 tw:lg:ml-0">
-            {%- render 'product-price', product: product, use_variant: true, show_badges: block.settings.show_bages, -%}
+            {%- render 'product-price', product: product, use_variant: true, show_badges: block.settings.show_bages -%}
           </div>
         {% when 'color-picker' %}
-          <color-picker role="radiogroup" aria-live="polite" aria-atomic="true" class="tw:block tw:m-auto tw:max-w-146 tw:mt-6 tw:lg:mr-0 tw:lg:mb-0 tw:lg:ml-0">
+          <color-picker
+            role="radiogroup"
+            aria-live="polite"
+            aria-atomic="true"
+            class="tw:block tw:m-auto tw:max-w-146 tw:mt-6 tw:lg:mr-0 tw:lg:mb-0 tw:lg:ml-0"
+          >
             {%- render 'color-picker', product: product -%}
-        </color-picker>
+          </color-picker>
         {% when 'size-option' %}
-          <size-select role="radiogroup" class="tw:block tw:m-auto tw:max-w-146 tw:mt-6 tw:lg:mr-0 tw:lg:mb-0 tw:lg:ml-0">
+          <div
+            class="tw:block tw:m-auto tw:max-w-146 tw:mt-6 tw:lg:mr-0 tw:lg:mb-0 tw:lg:ml-0"
+          >
             {%- render 'size-select', product: product -%}
-          </size-select>
+          </div>
       {% endcase %}
     {% endfor %}
+    <script src="{{ 'product-gallery-swiper.js' | asset_url }}" defer></script>
+    <script src="{{ 'color-picker.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'size-select.js' | asset_url }}" defer="defer"></script>
   </div>
-  <script src="{{ 'color-picker.js' | asset_url }}" defer="defer"></script>
-  <script src="{{ 'size-select.js' | asset_url }}" defer="defer"></script>
 </section>
 
 {% schema %}
@@ -100,7 +108,7 @@
     {
       "type": "product-link",
       "name": "t:sections.main-product-section.blocks.product-link.name",
-      "limit": 1,
+      "limit": 1
     },
     {
       "type": "product-gallery",
@@ -155,7 +163,7 @@
       "type": "size-option",
       "name": "t:sections.main-product-section.blocks.size-option.name",
       "limit": 1
-    },
+    }
   ],
   "presets": [
     {
