--- a/snippets/color-picker.liquid
+++ b/snippets/color-picker.liquid
@@ -10,8 +10,11 @@
   assign target_key = target_product.metafields.custom.group_key.value
   assign target_product_color = target_product.metafields.custom.product_color.value
 -%}
-<div
+<color-picker
   class="tw:flex"
+  role="radiogroup"
+  aria-live="polite"
+  aria-atomic="true"
 >
   {%- if target_product_color != blank -%}
     {% for product in all_products %}
@@ -26,12 +29,17 @@
           type="button"
           class="color-button tw:w-22 tw:h-22 tw:cursor-pointer tw:mr-2 tw:rounded-xl tw:overflow-hidden {% if product.handle == target_product.handle %}tw:border tw:border-dark {% endif %}"
         >
-          {{ product.featured_image | image_url: width: 100 | image_tag: alt: product_color, class: 'tw:w-full tw:object-cover tw:aspect-square' }}
+          {{
+            product.featured_image
+            | image_url: width: 100
+            | image_tag: alt: product_color, class: 'tw:w-full tw:object-cover tw:aspect-square'
+          }}
         </button>
       {% endif %}
     {% endfor %}
   {%- else -%}
-    <p class="tw:text-base tw:text-dark">{{ 'main-product-section.color-picker.one_color' | t | default: 'ONE COLOR' }}</p>
+    <p class="tw:text-base tw:text-dark">
+      {{ 'main-product-section.color-picker.one_color' | t | default: 'ONE COLOR' }}
+    </p>
   {% endif %}
-</div>
-
+</color-picker>
