--- a/snippets/product-gallery.liquid
+++ b/snippets/product-gallery.liquid
@@ -4,13 +4,11 @@
     {%- render 'product-gallery', product: product,  min-rating: 3.5 -%}
 {%- endcomment -%}
 
-<script src="{{ 'product-gallery-swiper.js' | asset_url }}" defer></script>
-
 {%- assign sizes = '(min-width: 768px) 584px, calc(100vw - 32px)' -%}
 {% assign rating_clean = product.metafields.custom.rating.value | replace: ',', '.' | strip %}
 {% assign product_rating = rating_clean | plus: 0 | default: 3.0 %}
 
-<div
+<product-gallery
   class="product-gallery-section tw:w-full tw:flex tw:flex-col-reverse tw:gap-4 tw:lg:flex-row tw:lg:gap-6 tw:lg:max-w-162"
   role="group"
   aria-label="Product image gallery"
@@ -46,9 +44,10 @@
       <div class="swiper-wrapper">
         {%- unless product.images == blank -%}
           {%- for image in product.images -%}
-            <div class="swiper-slide tw:!size-fit">
+            <div class="swiper-slide">
               <button
                 type="button"
+                role="radio"
                 class="tw:w-22 tw:h-22 tw:cursor-pointer tw:rounded-lg tw:overflow-hidden tw:relative tw:after:content-[''] tw:after:absolute tw:after:inset-0 tw:after:bg-dark/20 tw:after:opacity-0 tw:[&[aria-pressed='true']]:after:opacity-100"
                 aria-label="Show image {{ forloop.index }}"
                 aria-pressed="{{ forloop.first }}"
@@ -57,7 +56,7 @@
                 {{
                   image
                   | image_url: width: 88
-                  | image_tag: alt: alt_text, class: 'tw:object-cover tw:aspect-square tw:w-full'
+                  | image_tag: alt: alt_text, loading: 'lazy', class: 'tw:object-cover tw:aspect-square tw:w-full'
                 }}
               </button>
             </div>
@@ -75,19 +74,35 @@
           {%- for image in product.images -%}
             <div class="swiper-slide">
               {% assign alt_text = product.title | append: forloop.index %}
-              {{
-                image
-                | image_url: width: 343
-                | image_tag:
-                  alt: alt_text,
-                  widths: '320, 343, 420, 480, 584',
-                  sizes: sizes,
-                  class: 'main-image tw:w-full tw:object-cover tw:aspect-square tw:m-auto tw:max-w-146 tw:rounded-lg'
-              }}
+              {%- if forloop.first -%}
+                {{
+                  image
+                  | image_url: width: 343
+                  | image_tag:
+                    alt: alt_text,
+                    widths: '320, 343, 420, 480, 584',
+                    sizes: sizes,
+                    class: 'main-image tw:w-full tw:object-cover tw:aspect-square tw:m-auto tw:max-w-146 tw:rounded-lg',
+                    loading: 'eager',
+                    fetchpriority: 'high'
+                }}
+              {%- else -%}
+                {{
+                  image
+                  | image_url: width: 343
+                  | image_tag:
+                    alt: alt_text,
+                    widths: '320, 343, 420, 480, 584',
+                    sizes: sizes,
+                    class: 'main-image tw:w-full tw:object-cover tw:aspect-square tw:m-auto tw:max-w-146 tw:rounded-lg',
+                    loading: 'lazy'
+                }}
+              {%- endif -%}
             </div>
           {%- endfor -%}
         {%- endunless -%}
       </div>
     </div>
   {%- endif -%}
-</div>
+  <script src="{{ 'product-gallery-swiper-first-init.js' | asset_url }}" defer></script>
+</product-gallery>
