feat: upd size snippet

--- a/sections/main-product-section.liquid
+++ b/sections/main-product-section.liquid
@@ -68,6 +68,7 @@
     <script src="{{ 'product-gallery-swiper.js' | asset_url }}" defer></script>
     <script src="{{ 'color-picker.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'size-select.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'size-popup.js' | asset_url }}" defer></script>
   </div>
 </section>
 
