--- a/sections/main-product-section.liquid
+++ b/sections/main-product-section.liquid
@@ -69,6 +69,56 @@
           >
             {%- render 'product-form', product: product -%}
           </div>
+        {% when 'checkout_details' %}
+          <div
+            class="tw:block tw:m-auto tw:max-w-146 tw:mt-6 tw:lg:mr-0 tw:lg:mb-0 tw:lg:ml-0"
+          >
+            <div class="tw:text-dark tw:text-sm tw:w-full tw:flex tw:gap-2">
+              {%- if block.settings.iconShipping != blank -%}
+                {{
+                  product.block.settings.iconShipping
+                  | image_url: width: 20
+                  | image_tag:
+                    alt: block.settings.iconShipping.label,
+                    class: 'icon tw:w-5 tw:h-5 tw:object-cover tw:aspect-square'
+                }}
+              {%- else -%}
+                {{ 'icon-shipping.svg' | inline_asset_content }}
+              {%- endif -%}
+              <p>{{ block.settings.shipping | escape }}</p>
+            </div>
+            <div class="tw:text-dark tw:text-sm tw:w-full tw:flex tw:gap-2 tw:mt-3">
+               {%- if block.settings.iconCheckout != blank -%}
+                {{
+                  product.block.settings.iconCheckout
+                  | image_url: width: 20
+                  | image_tag:
+                    alt: block.settings.iconCheckout.label,
+                    class: 'icon tw:w-5 tw:h-5 tw:object-cover tw:aspect-square'
+                }}
+              {%- else -%}
+                {{ 'icon-checkout.svg' | inline_asset_content }}
+              {%- endif -%}
+              <p>{{ block.settings.checkout | escape }}</p>
+            </div>
+            <div class="tw:text-dark tw:text-sm tw:w-full tw:flex tw:gap-2 tw:mt-3">
+              {%- if block.settings.iconAfterpay != blank -%}
+                {{
+                  product.block.settings.iconAfterpay
+                  | image_url: width: 20
+                  | image_tag:
+                    alt: block.settings.iconAfterpay.label,
+                    class: 'icon tw:w-5 tw:h-5 tw:object-cover tw:aspect-square'
+                }}
+              {%- else -%}
+                {{ 'icon-afterpay.svg' | inline_asset_content }}
+              {%- endif -%}
+              <p>{{ block.settings.afterpay | escape }}</p>
+            </div>
+            <div class="tw:text-gray tw:text-sm tw:w-full tw:flex tw:gap-2 tw:mt-6">
+              <p>{{ block.settings.description | escape }}</p>
+            </div>
+          </div>
       {% endcase %}
     {% endfor %}
     <script src="{{ 'product-gallery-swiper.js' | asset_url }}" defer></script>
@@ -90,7 +140,7 @@
     {
       "type": "range",
       "id": "padding_top",
-      "label": "t:sections.general.padding.padding_top",
+      "label": "t:general.padding.padding_top",
       "min": 0,
       "max": 100,
       "step": 4,
@@ -100,7 +150,7 @@
     {
       "type": "range",
       "id": "padding_bottom",
-      "label": "t:sections.general.padding.padding_bottom",
+      "label": "t:general.padding.padding_bottom",
       "min": 0,
       "max": 100,
       "step": 4,
@@ -172,6 +222,52 @@
       "type": "buy_button",
       "name": "t:sections.main-product-section.blocks.buy_button.name",
       "limit": 1
+    },
+    {
+      "type": "checkout_details",
+      "name": "t:sections.main-product-section.blocks.checkout_details.name",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "iconShipping",
+          "label": "t:sections.main-product-section.blocks.checkout_details.settings.iconShipping.label"
+        },
+        {
+          "type": "text",
+          "id": "shipping",
+          "default": "t:sections.main-product-section.blocks.checkout_details.settings.shipping.default",
+          "label": "t:sections.main-product-section.blocks.checkout_details.settings.shipping.label"
+        },
+        {
+          "type": "image_picker",
+          "id": "iconCheckout",
+          "label": "t:sections.main-product-section.blocks.checkout_details.settings.iconCheckout.label"
+        },
+        {
+          "type": "text",
+          "id": "checkout",
+          "default": "t:sections.main-product-section.blocks.checkout_details.settings.checkout.default",
+          "label": "t:sections.main-product-section.blocks.checkout_details.settings.checkout.label"
+        },
+        {
+          "type": "image_picker",
+          "id": "iconAfterpay",
+          "label": "t:sections.main-product-section.blocks.checkout_details.settings.iconAfterpay.label"
+        },
+        {
+          "type": "text",
+          "id": "afterpay",
+          "default": "t:sections.main-product-section.blocks.checkout_details.settings.afterpay.default",
+          "label": "t:sections.main-product-section.blocks.checkout_details.settings.afterpay.label"
+        },
+        {
+          "type": "text",
+          "id": "description",
+          "default": "t:sections.main-product-section.blocks.checkout_details.settings.description.default",
+          "label": "t:sections.main-product-section.blocks.checkout_details.settings.description.label"
+        }
+      ]
     }
   ],
   "presets": [
