--- a/sections/main-product-section.liquid
+++ b/sections/main-product-section.liquid
@@ -121,7 +121,7 @@
           </div>
       {% endcase %}
     {% endfor %}
-    <script src="{{ 'product-gallery-swiper.js' | asset_url }}" defer></script>
+    
     <script src="{{ 'color-picker.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'size-select.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'size-popup.js' | asset_url }}" defer></script>
@@ -272,7 +272,7 @@
   ],
   "presets": [
     {
-      "name": "Main product section"
+      "name": "t:sections.main-product-section.presets"
     }
   ]
 }
