feat: updated recomendations section

--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -39,7 +39,7 @@
 </section>
 {% schema %}
 {
-  "name": "t:sections.main-product-section.name",
+  "name": "t:sections.accordion.name",
   "tag": "section",
   "class": "section",
   "disabled_on": {
