--- a/snippets/product-price.liquid
+++ b/snippets/product-price.liquid
@@ -1,7 +1,7 @@
 {% comment %}
   snippets/product-price.liquid
   Usage:
-  {% render 'product-price', product: product %}
+  {% render 'product-price', product: product, show-bages: true %}
 {% endcomment %}
 
 {%- liquid
