feat: upd review section

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -36,5 +36,6 @@
     {% sections 'footer-group' %}
     <script src="{{ 'section-swiper.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'product-gallery-swiper.js' | asset_url }}" defer></script>
+    <script src="{{ 'recommendations-carousel.js' | asset_url }}" defer></script>
   </body>
 </html>
