--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -115,7 +115,7 @@
       </div>
     </div>
     <div class="nav-title">{{ 'footer.useful_links' | t | default: 'Useful links' }}</div>
-    <nav class="footer-nav" aria-label="{{ 'a11y.footer_nav' | t }}">
+    <nav class="footer-nav" aria-label="{{ 'accessibility.footer_nav' | t }}">
       <a href="{{ routes.account_login_url }}">{{ 'footer.login' | t }}</a>
       <a href="{{ routes.search_url }}">{{ 'footer.search' | t }}</a>
       <a href="{{ routes.all_products_collection_url }}">{{ 'footer.shop_all' | t }}</a>
