--- a/snippets/size-popup.liquid
+++ b/snippets/size-popup.liquid
@@ -23,7 +23,7 @@
   >
     <button
       data-close
-      class="button tw:w-4 tw:h-4 tw:text-dark tw:absolute tw:z-999 tw:top-2 tw:right-2 tw:lg:top-4 tw:lg:right-6"
+      class="button close-button tw:w-4 tw:h-4 tw:text-dark tw:absolute tw:z-999 tw:top-2 tw:right-2 tw:lg:top-4 tw:lg:right-6 tw:pointer"
       aria-label="{{ 'accessibility.close_dialog' | t | default: 'Close size guide' }}"
     >
       {{ 'icon-close.svg' | inline_asset_content }}
